test/good/95.zlus
let hybrid f i = o where
   rec automaton
      | S(v) ->
	  local t in
	  do der t = 1.0 init 0.0
	  until i() then S(0.0)
          else up(t -. v) then do emit o = () in S(0.0)
          init S(0.0)
