test/bad/46.zlus
(* This program is rejected because o is not initialized *)
let hybrid f() = let der o = 1.0 in o
